poke/testsuite/poke.pkl/arrays-index-diag-1.pk
/* { dg-do compile } */

defvar a = [1,2,3][-2]; /* { dg-error "" } */
